--- a/docs/comprehensions.ipynb
+++ b/docs/comprehensions.ipynb
@@ -5,7 +5,7 @@
    "id": "2e5fa002-5b4f-4b55-9fb8-a2e0e422f8ce",
    "metadata": {},
    "source": [
-    "# comprehensions"
+    "# Comprehensions"
    ]
   },
   {
