--- a/docs/numpy/numpy01.ipynb
+++ b/docs/numpy/numpy01.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4e7b8d9d-6b03-4fbb-8dc4-7cfd6859a364",
    "metadata": {},
    "outputs": [],
@@ -220,6 +220,40 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "22ac1ccc-98a1-4ad4-bc4d-0a971b430a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3 4]\n",
+      " [4 5 6]\n",
+      " [6 7 8]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0],\n",
+       "       [0, 0, 0],\n",
+       "       [0, 0, 0]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([range(i, i+3) for i in [2, 4, 6]])\n",
+    "print(a)\n",
+    "np.zeros_like(a)"
    ]
   },
   {
