--- a/docs/basics/str.ipynb
+++ b/docs/basics/str.ipynb
@@ -5,7 +5,7 @@
    "id": "01a2d420-db00-4ddf-ae7f-d7023040dbc0",
    "metadata": {},
    "source": [
-    "# String in Python"
+    "# String"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f50920ae-e174-4f7e-ae3b-d50d9fca7921",
    "metadata": {},
    "outputs": [
@@ -46,13 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9e49deeb-761a-47da-8ddb-65a18b84b078",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "scrolled": true
    },
    "outputs": [
@@ -79,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6f3bafd7-10bc-49b2-a102-d1a60d6b2853",
    "metadata": {},
    "outputs": [
@@ -111,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "2e96e233-6c41-45d8-9b3f-46ea8b569145",
    "metadata": {},
    "outputs": [
