--- a/docs/basics/random.ipynb
+++ b/docs/basics/random.ipynb
@@ -44,6 +44,40 @@
     "res = random.randint(1, 3)\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4005fd94-4ec7-4d75-82c3-576d2db8392a",
+   "metadata": {},
+   "source": [
+    "## uniform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "52326ced-7dad-4659-93ba-049058d6254c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.459587440568137\n",
+      "12.99344179856023\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "RETRY_DELAY_RANGE = (3, 5)\n",
+    "\n",
+    "sleep_time = random.uniform(*RETRY_DELAY_RANGE)\n",
+    "\n",
+    "print(sleep_time)\n",
+    "print(random.uniform(10, 15))"
+   ]
   }
  ],
  "metadata": {
