--- a/docs/basics/range.ipynb
+++ b/docs/basics/range.ipynb
@@ -560,6 +560,33 @@
    "source": [
     "list(range(4, 5, -2))  # beyond the stop is omitted"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9ac2cba-b585-4fe9-9b3d-38e3293c0be0",
+   "metadata": {},
+   "source": [
+    "## *range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "41f1889a-027d-414f-8e59-4f4a7a47ca64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = (3, 5)\n",
+    "print(*r)"
+   ]
   }
  ],
  "metadata": {
@@ -578,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
